@@ -50,3 +50,8 @@ MM/DD/YY @ HH:MM - Description of change - (Initials)
 02/13/16 @ 12:25 - Modified ln28 in Assembly.php controller - (CS)
 02/13/16 @ 13:32 - Modified welcome.php view - (CS)
 02/13/16 @ 13:43 - Modified Collection.php model - (CS)
+
+02/14/16 @ 13:48 - Modified assembly.php view - (SS)
+02/14/16 @ 14:12 - Modified assembly.php controller - (SS)
+02/14/16 @ 14:38 - Modified Collections.php model - (SS)
+
